<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Rendering Settings</string>
    <string name="app_name">TingJpct3</string>
		
	<!-- Menu -->	
    <string name="settings">Settings</string>
    <string name="mute">Mute</string>
    <string name="alert">Alert</string>
    <string name="about">About</string>

	<!-- About Dialog -->	
    <string name="about_msg">3D World with menu and settings\n\n(C) 2013 Tingtronics</string>
    <string name="ok">OK</string>

    <!-- Setting -->
	<string name="pref_title">Settings</string> 
	<string name="pref_notify">Notify</string>
	<string name="pref_notify_summ">Send notifications about events</string>

	<string name="pref_notifyMethod">Notification Method</string>
	<string-array name="pref_notifyMethod_entries">
		<item>Email</item>
		<item>Text</item>
		<item>Ringtone</item>
		<item>Buzzz</item>
	</string-array>	
	<string-array name="pref_notifyMethod_values">
		<item>Email</item>
		<item>Text</item>
		<item>Ringtone</item>
		<item>Buzzz</item>
	</string-array>
	<string name="pref_notifyMethod_default">Email</string>

	<string name="pref_notifyBefore">Notify Before</string>
	<string-array name="pref_notifyBefore_entries">
		<item>On Time</item>
		<item>1 min</item>
		<item>5 min</item>
		<item>10 min</item>
	</string-array>	
	<string-array name="pref_notifyBefore_values">
		<item>0</item>
		<item>1</item>
		<item>5</item>
		<item>10</item>
	</string-array>

	<string-array name="empty"/>	
	
</resources>
