<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
	<PreferenceCategory 
        android:title="Reminders">
		<EditTextPreference
			android:key="pref_notifySubject"
			android:title="Subject"
			android:summary="Message Subject Line"
			android:defaultValue="Reminder ..." />
		<CheckBoxPreference
			android:key="pref_notify"
			android:title="@string/pref_notify"
			android:summary="@string/pref_notify_summ"
			android:defaultValue="false" />
		<ListPreference
			android:dependency="pref_notify"
			android:key="pref_notifyMethod"
			android:title="@string/pref_notifyMethod"
			android:dialogTitle="@string/pref_notifyMethod"
			android:entries="@array/pref_notifyMethod_entries"
			android:entryValues="@array/pref_notifyMethod_values"
			android:defaultValue="@string/pref_notifyMethod_default" />
		<MultiSelectListPreference
			android:dependency="pref_notify"
			android:key="pref_notifyBefore"
			android:title="@string/pref_notifyBefore"
			android:dialogTitle="@string/pref_notifyBefore"
			android:entries="@array/pref_notifyBefore_entries"
			android:entryValues="@array/pref_notifyBefore_values"
			android:defaultValue="@array/empty"
		/>
	</PreferenceCategory>
</PreferenceScreen>
